# calibre-cron-job

./: .env  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
calibre_cron_job/: custom_economist.recipe  main.py
cdk/: app.py
